--- a/nippon/css/style.css
+++ b/nippon/css/style.css
@@ -99,7 +99,7 @@ body{
     grid-column-end: span 3;
     justify-self: center;
     font-size: 3rem;
-    color: white;
+    color: #0000FF;
 }
 
 .hero p{
@@ -109,7 +109,7 @@ body{
     justify-self: center;
     text-align: center;
     font-size: 2rem;
-    color: white;
+    color: #0000FF;
 }
 
 #hero-pil{
