--- a/nippon/css/style.css
+++ b/nippon/css/style.css
@@ -236,19 +236,53 @@ body{
     align-items: center;
  }
 
+ .stor-container {
+    display: flex;
+    flex-direction: row;
+ }
+
  .stor-container ul {
     list-style: none;
     line-height: 1.5rem;
+    padding: 1rem 8.5rem;
  }
 
  .stor-container h4 {
-    margin: 1rem 0;
+    margin: 0; 
  }
+
+ /* Styling af nyhedsbrev */
+ .nyhedsbrev {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
+
+ input[type="email"] {
+    padding: 5px;
+    border: 1px solid #4C3B3B; 
+    background-color: #FAF6F2;
+    font-family: inherit;
+ }
+
+ button {
+    padding: 5px;
+    border: 1px solid #4C3B3B;
+    background-color: #F5EEE4;
+    cursor: pointer;
+    font-family: inherit;
+    margin: 0 5px;
+ }
+
 
  /* Styling af socials */
  footer .socials {
     padding: 1rem;
     color: #4C3B3B;
+ }
+
+ .socials {
+    margin-left: -1.8rem;
  }
 
  .socials a {
@@ -257,5 +291,6 @@ body{
     line-height: 38px;
     display: inline-block;
     border-radius: 50%;
-    margin: 0 20px;
+    padding: 0 15px;
+    color: #0000FF;
  }
