--- a/nippon/css/maeltidskasser.css
+++ b/nippon/css/maeltidskasser.css
@@ -178,6 +178,7 @@ main{
     background-color: #F5EEE4;
     justify-content: center;
     align-items: center;
+    margin-top: 2rem;
  }
 
  .stor-container {
