--- a/nippon/css/style.css
+++ b/nippon/css/style.css
@@ -226,6 +226,7 @@ body{
     background-color: #F5EEE4;
     justify-content: center;
     align-items: center;
+    margin-top: 2rem;
  }
 
  .stor-container {
