--- a/nippon/css/udforsk.css
+++ b/nippon/css/udforsk.css
@@ -218,6 +218,7 @@ body{
     background-color: #F5EEE4;
     justify-content: center;
     align-items: center;
+    margin-top: 2rem;
  }
 
  .stor-container {
