--- a/nippon/css/style.css
+++ b/nippon/css/style.css
@@ -22,11 +22,6 @@ body{
     grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
 }
 
-.hero-content-1{
-    display: grid;
-    align-items: center;
-}
-
 #hero-logo{
     width: 9rem;
     grid-column-start: 3;
@@ -38,15 +33,13 @@ body{
 
 #hero-waves-1{
     grid-column-start: 1;
-    grid-column-end: 5;
+    grid-column-end: span 5;
     width: 100%;
-    grid-row-start: 2;
-    align-self: flex-end;
-    width: auto;
+    grid-row-start: 3;
+    align-self: self-start;
     height: 3rem;
+    overflow: hidden;
 }
-
-
 
 .hero-icons{
     grid-column-start: 5;
@@ -58,32 +51,36 @@ body{
 #hero-menupunkt-1{
     grid-column-start: 2;
     grid-column-end: span 2;
-    grid-row-start: 3;
+    grid-row-start: 4;
     justify-self: center;
-    align-self: center;
+    align-self: self-start;
     font-size: 1.5rem;
+    color: #0000FF;
 }
 
 #hero-menupunkt-2{
     grid-column-start: 3;
     grid-column-end: span 2;
-    grid-row-start: 3;
+    grid-row-start: 4;
     justify-self: center;
-    align-self: center;
+    align-self: self-start;
     font-size: 1.5rem;
+    color: #0000FF;
 }
 
 #hero-menupunkt-3{
     grid-column-start: 5;
-    grid-row-start: 3;
+    grid-row-start: 4;
     justify-self: end;
-    align-self: center;
+    align-self: self-start;
 }
 
 #hero-billede{
+    align-self: self-end;
     grid-column-start: 1;
     grid-column-end: span 5;
     grid-row-start: 4;
+    grid-row-end: span 7;
     width: 100%;
 }
 
