--- a/nippon/css/style.css
+++ b/nippon/css/style.css
@@ -85,7 +85,7 @@ body{
 }
 
 .hero h1{
-    grid-row-start: 5;
+    grid-row-start: 6;
     grid-column-start: 2;
     grid-column-end: span 3;
     justify-self: center;
@@ -94,12 +94,12 @@ body{
 }
 
 .hero p{
-    grid-row-start: 6;
+    grid-row-start: 7;
     grid-column-start: 1;
     grid-column-end: span 5;
     justify-self: center;
     text-align: center;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     color: #4C3B3B;
 }
 
@@ -107,6 +107,9 @@ body{
     grid-row-start: 10;
     grid-column-start: 3;
     justify-self: center;
+    color: #4C3B3B;
+    font-size: 2rem;
+    font-weight: lighter;
 }
 
 /* Navbar */
@@ -162,7 +165,7 @@ body{
   'wght' 500,
   'GRAD' 0,
   'opsz' 24;
-  color: black;
+  color: #4C3B3B;
   margin: 0 .5rem;
 }
 
