--- a/nippon/css/maeltidskasser.css
+++ b/nippon/css/maeltidskasser.css
@@ -85,6 +85,7 @@ main{
     flex-direction: column;
     align-items: center;
     background-color: white;
+    color: #4C3B3B;
     grid-column-start: 2;
     width: 100%;
     height: 29rem;
@@ -97,6 +98,7 @@ main{
     flex-direction: column;
     align-items: center;
     background-color: white;
+    color: #4C3B3B;
     grid-column-start: 4;
     width: 100%;
     height: 29rem;
@@ -109,6 +111,7 @@ main{
     flex-direction: column;
     align-items: center;
     background-color: white;
+    color: #4C3B3B;
     grid-column-start: 2;
     width: 100%;
     height: 29rem;
@@ -122,6 +125,7 @@ main{
     align-items: center;;
     grid-template-columns: auto;
     background-color: white;
+    color: #4C3B3B;
     grid-column-start: 4;
     width: 100%;
     height: 29rem;
@@ -143,6 +147,7 @@ main{
 #ingredienspakke h2{
     justify-self: center;
     font-size: 2rem;
+    text-transform: uppercase;
 }
 
 #oplevelsespakke p,
@@ -150,7 +155,7 @@ main{
 #redskabspakke p,
 #ingredienspakke p{
     justify-self: center;
-    font-size: 1.5rem;
+    font-size: 1rem;
     max-width: 15rem;
 }
 
