--- a/nippon/css/404.css
+++ b/nippon/css/404.css
@@ -13,10 +13,79 @@ body {
   main {
     text-align: center;
   }
-  
+
+  /* Hero section */
+.navbar1{
+    height: 100vh;
+    background-color: rgba(245, 238, 228, 0.5);
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+}
+
+#nav-logo{
+    width: 9rem;
+    grid-column-start: 3;
+    justify-self: center;
+    grid-row-start: 1;
+    grid-row-end: span 2;
+    align-self: center;
+}
+
+#nav-waves-1{
+    grid-column-start: 1;
+    grid-column-end: span 5;
+    width: 100%;
+    grid-row-start: 3;
+    align-self: self-start;
+    height: 3rem;
+    overflow: hidden;
+}
+
+.nav-icons{
+    grid-column-start: 5;
+    grid-row-start: 1;
+    align-self: center;
+    justify-self: end;
+}
+
+#nav-menupunkt-1{
+    grid-column-start: 2;
+    grid-column-end: span 2;
+    grid-row-start: 4;
+    justify-self: center;
+    align-self: self-start;
+    font-size: 1.5rem;
+    color: #0000FF;
+}
+
+#nav-menupunkt-2{
+    grid-column-start: 3;
+    grid-column-end: span 2;
+    grid-row-start: 4;
+    justify-self: center;
+    align-self: self-start;
+    font-size: 1.5rem;
+    color: #0000FF;
+}
+
+#nav-menupunkt-3{
+    grid-column-start: 5;
+    grid-row-start: 4;
+    justify-self: end;
+    align-self: self-start;
+}
+
+  /* styling af main  */
+
+  .fejlside{
+    display: grid;
+  }
+
+
   h1 {
     font-size: 6rem;
-    margin-top: 20%;
+    margin-top: 2%;
     margin-bottom: -1%;
   }
   
