--- a/nippon/css/404.css
+++ b/nippon/css/404.css
@@ -14,7 +14,7 @@ body {
     text-align: center;
   }
 
-  /* Hero section */
+  /* navbar section */
 .navbar1{
     height: 100vh;
     background-color: rgba(245, 238, 228, 0.5);
