--- a/nippon/css/404.css
+++ b/nippon/css/404.css
@@ -1,30 +1,25 @@
+*{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+
 body {
-    margin: 0;
-    padding: 0;
     font-family: "Sulphur Point", sans-serif;
     background-color: #f5eee4; 
     color: #4C3B3B;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
-  }
-  
-  main {
-    text-align: center;
   }
 
-  /* Hero section */
-.navbar1{
-    height: 100vh;
-    background-color: rgba(245, 238, 228, 0.5);
-    display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-    grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+.navbar{
+  background-color: rgba(245, 238, 228, 0.5);
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(3, 1fr);
 }
 
-#nav-logo{
-    width: 9rem;
+#hero-logo{
+    width: 7rem;
     grid-column-start: 3;
     justify-self: center;
     grid-row-start: 1;
@@ -32,7 +27,7 @@ body {
     align-self: center;
 }
 
-#nav-waves-1{
+#hero-waves-1{
     grid-column-start: 1;
     grid-column-end: span 5;
     width: 100%;
@@ -42,14 +37,14 @@ body {
     overflow: hidden;
 }
 
-.nav-icons{
+.hero-icons{
     grid-column-start: 5;
     grid-row-start: 1;
     align-self: center;
     justify-self: end;
 }
 
-#nav-menupunkt-1{
+#hero-menupunkt-1{
     grid-column-start: 2;
     grid-column-end: span 2;
     grid-row-start: 4;
@@ -59,7 +54,7 @@ body {
     color: #0000FF;
 }
 
-#nav-menupunkt-2{
+#hero-menupunkt-2{
     grid-column-start: 3;
     grid-column-end: span 2;
     grid-row-start: 4;
@@ -69,38 +64,26 @@ body {
     color: #0000FF;
 }
 
-#nav-menupunkt-3{
-    grid-column-start: 5;
-    grid-row-start: 4;
-    justify-self: end;
-    align-self: self-start;
-}
-
   /* styling af main  */
-
-  .fejlside{
+main{
     display: grid;
   }
 
-
-  h1 {
+main h1 {
     font-size: 6rem;
-    margin-top: 2%;
-    margin-bottom: -1%;
   }
   
-  h2 {
+main h2 {
     font-size: 2rem;
   }
   
-  img {
+main img {
     width: 30%;
     max-width: 100%;
     height: auto;
-    margin-top: 1%;
   }
   
-  a {
+main a {
     font-size: 1.5rem;
     font-family: "Sulphur Point", sans-serif;
     color: #4C3B3B;
