--- a/nippon/css/404.css
+++ b/nippon/css/404.css
@@ -15,59 +15,68 @@ main {
     text-align: center;
   }
 
-  /* Hero section */
-.navbar1{
-    height: 100vh;
-    background-color: rgba(245, 238, 228, 0.5);
-    display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-    grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+/* Hero section */
+.navbar{
+  background-color: rgba(245, 238, 228, 0.5);
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(3, 1fr);
 }
 
 #hero-logo{
-    width: 7rem;
-    grid-column-start: 3;
-    justify-self: center;
-    grid-row-start: 1;
-    grid-row-end: span 2;
-    align-self: center;
+  width: 7.5rem;
+  grid-column-start: 3;
+  justify-self: center;
+  grid-row-start: 1;
+  grid-row-end: span 2;
+  align-self: center;
 }
 
 #hero-waves-1{
-    grid-column-start: 1;
-    grid-column-end: span 5;
-    width: 100%;
-    grid-row-start: 3;
-    align-self: self-start;
-    height: 3rem;
-    overflow: hidden;
+  grid-column-start: 1;
+  grid-column-end: span 5;
+  width: 100%;
+  grid-row-start: 3;
+  align-self: self-start;
+  height: 3rem;
+  overflow: hidden;
 }
 
 .hero-icons{
-    grid-column-start: 5;
-    grid-row-start: 1;
-    align-self: center;
-    justify-self: end;
+  grid-column-start: 5;
+  grid-row-start: 1;
+  align-self: center;
+  justify-self: end;
 }
 
 #hero-menupunkt-1{
-    grid-column-start: 2;
-    grid-column-end: span 2;
-    grid-row-start: 4;
-    justify-self: center;
-    align-self: self-start;
-    font-size: 1.5rem;
-    color: #0000FF;
+  grid-column-start: 2;
+  grid-column-end: span 2;
+  grid-row-start: 4;
+  justify-self: center;
+  align-self: self-start;
+  font-size: 1.3rem;
+  color: #0000FF;
 }
 
 #hero-menupunkt-2{
-    grid-column-start: 3;
-    grid-column-end: span 2;
-    grid-row-start: 4;
-    justify-self: center;
-    align-self: self-start;
-    font-size: 1.5rem;
-    color: #0000FF;
+  grid-column-start: 3;
+  grid-column-end: span 2;
+  grid-row-start: 4;
+  justify-self: center;
+  align-self: self-start;
+  font-size: 1.3rem;
+  color: #0000FF;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 500,
+  'GRAD' 0,
+  'opsz' 24;
+  color: #4C3B3B;
+  margin: 0 .5rem;
 }
 
   /* styling af main  */
