--- a/nippon/css/404.css
+++ b/nippon/css/404.css
@@ -15,7 +15,7 @@ main {
     text-align: center;
   }
 
-/* Hero section */
+/* Navbar */
 .navbar{
   background-color: rgba(245, 238, 228, 0.5);
   display: grid;
@@ -23,7 +23,7 @@ main {
   grid-template-rows: repeat(3, 1fr);
 }
 
-#hero-logo{
+#navbar-logo{
   width: 7.5rem;
   grid-column-start: 3;
   justify-self: center;
@@ -32,7 +32,7 @@ main {
   align-self: center;
 }
 
-#hero-waves-1{
+#navbar-waves{
   grid-column-start: 1;
   grid-column-end: span 5;
   width: 100%;
@@ -42,14 +42,14 @@ main {
   overflow: hidden;
 }
 
-.hero-icons{
+.navbar-icons{
   grid-column-start: 5;
   grid-row-start: 1;
   align-self: center;
   justify-self: end;
 }
 
-#hero-menupunkt-1{
+#navbar-menupunkt-1{
   grid-column-start: 2;
   grid-column-end: span 2;
   grid-row-start: 4;
@@ -59,7 +59,7 @@ main {
   color: #0000FF;
 }
 
-#hero-menupunkt-2{
+#navbar-menupunkt-2{
   grid-column-start: 3;
   grid-column-end: span 2;
   grid-row-start: 4;
