--- a/nippon/css/favoritter.css
+++ b/nippon/css/favoritter.css
@@ -14,7 +14,64 @@ body{
     background-color: rgba(245, 238, 228, 0.5);
 }
 
-.favoritter {
-    
+
+/* overskrift */
+
+.overskrift {
+display: flex;
+align-items: center;
+justify-content: center;
+font-size: 2rem;
 }
+
+/* h2 plus whitebox */
+.favoritter {
+    background-color: white;
+    margin-left: 18%;
+    margin-right: 18%;
+}
+
+h2 {
+    font-size: 1.8rem;
+    text-align: center;
+}
+
+h3 {
+    font-size: 1.3rem;
+}
+
+/* img */
+
+img {
+    width: 20%;
+    height: 20%;
+}
+
+.spisepinde {
+    width: 6%;
+}
+
+.dehydreret-tang {
+    width: 12%;
+}
+
+/*  */
+.material-symbols-outlined {
+    color:#0000FF;
+    width: 10%;
+}
+
+.tilføj {
+    color: #4C3B3B;
+    text-decoration: underline;
+    font-size: 1.5rem;
+}
+
+
+
+
+
+
+
+
 
