--- a/nippon/css/udforsk-kokke.css
+++ b/nippon/css/udforsk-kokke.css
@@ -74,8 +74,8 @@ body{
 /* Portræt af Nobu Matshuisa */
 #kokkene{
     display: grid;
-    grid-template-rows: repeat(10, 1fr);
-    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(9, 2fr);
+    grid-template-columns: repeat(9, 2fr);
 }
 
 #overskrift{
@@ -90,7 +90,7 @@ body{
     border-top: 1px solid;
     grid-row-start: 2;
     grid-column-start: 2;
-    grid-column-end: span 7;
+    grid-column-end: 9;
 }
 
 #nobu-navn{
@@ -100,7 +100,7 @@ body{
     grid-row-start: 2;
     align-self: end;
     grid-column-start: 5;
-    grid-column-end: span 2;
+    grid-column-end: span 3;
     z-index: 1;
 }
 
@@ -159,7 +159,7 @@ body{
     grid-row-start: 6;
     align-self: center;
     grid-column-start: 4;
-    grid-column-end: span 2;
+    grid-column-end: span 3;
     z-index: 1;
 }
 
