--- a/nippon/css/favoritter.css
+++ b/nippon/css/favoritter.css
@@ -68,6 +68,12 @@ img {
 }
 
  /* Styling af footer */
+ /* Styling af billede i footer */
+    .footer img {
+        width: 100%;
+        transform: rotate(180deg);
+    }
+    
  .footer {
     display: flex;
     flex-direction: column;
