--- a/nippon/css/maeltidskasser.css
+++ b/nippon/css/maeltidskasser.css
@@ -178,6 +178,12 @@ main{
  }
 
   /* Styling af footer */
+  /* Styling af billede i footer */
+    .footer img {
+        width: 100%;
+        transform: rotate(180deg);
+    }
+    
   .footer {
     display: flex;
     flex-direction: column;
