--- a/nippon/css/style.css
+++ b/nippon/css/style.css
@@ -233,6 +233,12 @@ body{
  }
 
  /* Styling af footer */
+ /* Styling af billede i footer */
+.footer img {
+    width: 100%;
+    transform: rotate(180deg);
+}
+
  .footer {
     display: flex;
     flex-direction: column;
