--- a/nippon/css/udforsk-kredsloeb.css
+++ b/nippon/css/udforsk-kredsloeb.css
@@ -90,6 +90,12 @@
 
 
     /* Styling af footer */
+    /* Styling af billede i footer */
+.footer img {
+   width: 100%;
+   transform: rotate(180deg);
+}
+
  .footer {
     display: flex;
     flex-direction: column;
