--- a/nippon/css/favoritter.css
+++ b/nippon/css/favoritter.css
@@ -16,12 +16,11 @@ body{
 
 
 /* overskrift */
-
 .overskrift {
 display: flex;
 align-items: center;
 justify-content: center;
-font-size: 2rem;
+font-size: 1.7rem;
 }
 
 /* h2 plus whitebox */
@@ -29,39 +28,157 @@ font-size: 2rem;
     background-color: white;
     margin-left: 18%;
     margin-right: 18%;
+    padding: 1rem;
 }
 
 h2 {
-    font-size: 1.8rem;
-    text-align: center;
+    font-size: 1.5rem;
+    text-align: left;
+    margin: 1rem;
 }
 
 h3 {
     font-size: 1.3rem;
 }
 
-/* img */
+/* Styling så elementerne står ved siden af hinanden ved oplevelseskassen */
+.oplevelse-kasse {
+    display: flex;
+    align-items: center;
+    margin-bottom: 3rem;
+}
 
+.container1 {
+    display: flex;
+    flex-direction: row;
+}
+
+.tilføj, #tilføj {
+    margin-top: 1rem;
+}
+
+.tilføj {
+    margin-left: 22rem; 
+    margin-right: 1rem;
+}
+
+.section p {
+    margin-top: -1rem;
+}
+
+/* Styling så elementerne står ved siden af hinanden ved ingredienskassen */
+.ingredienskasse {
+    display: flex;
+    align-items: center;
+    margin-bottom: 3rem;
+}
+
+.container2 {
+    display: flex;
+    flex-direction: row;
+}
+
+.tilføj1, #tilføj1 {
+    margin-top: 1rem;
+}
+
+.tilføj1 {
+    margin-left: 22rem; 
+    margin-right: 1rem;
+}
+
+.section1 p {
+    margin-top: -1rem;
+}
+
+/* Styling så elementerne står ved siden af hinadne ved spisepindene */
+.spisepinde {
+    display: flex;
+    align-items: center;
+    margin-bottom: 3rem;
+    margin-top: 2rem;
+}
+
+.container3 {
+    display: flex;
+    flex-direction: row;
+}
+
+.tilføj2, #tilføj2 {
+    margin-top: 1rem;
+}
+
+.tilføj2 {
+    margin-left: 27.5rem; 
+    margin-right: 1rem;
+}
+
+.section2 p {
+    margin-top: -1rem;
+    margin-left: 3.5rem;
+}
+
+.container3 h3 {
+    margin-left: 3.5rem;
+}
+
+/* Styling så elementerne står ved siden af hinanden ved tanget */
+.dehydreret-tang {
+    display: flex;
+    align-items: center;
+    margin-bottom: 3rem;
+}
+
+.container4 {
+    display: flex;
+    flex-direction: row;
+}
+
+.tilføj3, #tilføj3 {
+    margin-top: 2.5rem;
+}
+
+.tilføj3 {
+    margin-left: 24rem; 
+    margin-right: 1rem;
+}
+
+.section3 p {
+    margin-top: -1rem;
+    margin-left: 2rem;
+}
+
+.container4 h3 {
+    margin-left: 2rem;
+    width: 10rem;
+    margin-top: 2.5rem;
+}
+
+
+/* Styling af images */
 img {
     width: 20%;
     height: 20%;
+    margin: 2rem;
 }
 
 .spisepinde {
-    width: 6%;
+    width: 25%;
+    margin-left: 3rem;
 }
 
 .dehydreret-tang {
-    width: 12%;
+    width: 35%;
+    margin-left: 2rem;
 }
 
-/*  */
+/* Styling af tilføj knap og hjerte */
 .material-symbols-outlined {
     color:#0000FF;
     width: 10%;
 }
 
-.tilføj {
+.tilføj, .tilføj1, .tilføj2, .tilføj3 {
     color: #4C3B3B;
     text-decoration: underline;
     font-size: 1.5rem;
@@ -72,8 +189,9 @@ img {
     .footer img {
         width: 100%;
         transform: rotate(180deg);
+        margin: 0;
     }
-    
+
  .footer {
     display: flex;
     flex-direction: column;
