--- a/nippon/css/404.css
+++ b/nippon/css/404.css
@@ -23,12 +23,13 @@ main {
 }
 
 #navbar-logo{
-  width: 7.5rem;
+  width: 9.5rem;
   grid-column-start: 3;
   justify-self: center;
   grid-row-start: 1;
   grid-row-end: span 2;
   align-self: center;
+  padding-top: 3%; 
 }
 
 #navbar-waves{
@@ -55,6 +56,7 @@ main {
 }
 
 #navbar-link1{
+  color: #0000FF;
   grid-column: 2 / span 2;
   align-self: center;
   justify-self: center;
@@ -62,6 +64,7 @@ main {
 }
 
 #navbar-link2{
+  color: #0000FF;
   grid-column: 3 / span 2;
   align-self: center;
   justify-self: center;
@@ -95,14 +98,16 @@ main {
 /* Styling af dropdown menu */
 
 .dropdown-content {
-  display: none;
-}
+  display: none; /*sørger for at dropdown ikke vises hele tiden */
+} 
 
 #navbar-link2:hover + .dropdown-content{
-display: block;
-}
+display: block; /*viser dropdown ved hover */
+} 
+
 
 .dropdown-content {
+  color: #0000FF;
   grid-column: 3 / span 2;
   align-self: start;
   justify-self: center;
@@ -121,6 +126,8 @@ display: block;
 
 .dropdown-content li a {
   text-align: center;
+  color: #0000FF;
+  
   display: block;
   padding: 10px;
   font-size: 0.75em;
@@ -129,6 +136,20 @@ display: block;
  .dropdown-content li a:hover {
   color: #4C3B3B;
  }
+
+
+
+ /* Styler så den ikke ændre farver efter klik */
+
+ .navbar-link:focus {
+  outline: none; /* Remove the default focus outline */
+}
+
+.navbar-link:focus,
+.navbar-link:active {
+  color: #0000FF; /* Use the same color as the parent element */
+}
+
 
 /* Styling navbar slut */
 
