--- a/nippon/css/udforsk-kredsloeb.css
+++ b/nippon/css/udforsk-kredsloeb.css
@@ -4,12 +4,15 @@
     text-decoration: none;
   }
   
-  body {
-      font-family: "Sulphur Point", sans-serif;
-      background-color: #f5eee4; 
-      color: #4C3B3B;
-      height: 100vh;
-    }
+  body{
+   margin: 0;
+   padding: 0;
+   font-family: "Sulphur Point", sans-serif;
+   font-weight: 400;
+   font-style: normal;
+   background-color: rgba(245, 238, 228, 0.5);
+   display: grid;
+}
 
 
 /* Styling Navbar START */
@@ -153,8 +156,30 @@
  /* Styling navbar SLUT */
 
 
+/* Styling af main */
+ 
+.infographic {
+   margin: 5% 10% 5% 10%;
+   color: #4C3B3B;
+}
 
+main h1 {
+   padding-bottom:3rem;
 
+}
+
+main h2 {
+   font-size: 1.5vw;
+   padding-bottom: 3rem;
+}
+
+.infog {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 50rem;
+   width: auto;
+}
 
 
 
