--- a/nippon/css/kontakt.css
+++ b/nippon/css/kontakt.css
@@ -10,6 +10,149 @@
       color: #4C3B3B;
       height: 100vh;
     }
+
+
+      /* Styling Navbar START */
+.navbar{
+   display: grid;
+   grid-template-columns: repeat(5, 1fr);
+   grid-template-rows: repeat(4, 1fr);
+ }
+ 
+ 
+ #navbar-logo{
+   width: 9.5rem;
+   grid-column-start: 3;
+   justify-self: center;
+   grid-row-start: 1;
+   grid-row-end: span 2;
+   align-self: center;
+   padding-top: 3%; 
+ }
+ 
+ #navbar-waves{
+   grid-column-start: 1;
+   grid-column-end: span 5;
+   width: 100%;
+   grid-row-start: 3;
+   align-self: self-end;
+   height: 3rem;
+   overflow: hidden;
+ }
+ 
+ .navbar-icons{
+   grid-column-start: 5;
+   grid-row-start: 1;
+   align-self: center;
+   justify-self: end;
+ }
+ 
+ #navbar-styling-element{
+   grid-column: 1 / span 5;
+   grid-row-start: 4;
+   color: rgba(245, 238, 228, 1);
+ }
+ 
+ #navbar-link1{
+   color: #0000FF;
+   grid-column: 2 / span 2;
+   align-self: center;
+   justify-self: center;
+   grid-row-start: 4;
+ }
+ 
+ #navbar-link2{
+   color: #0000FF;
+   grid-column: 3 / span 2;
+   align-self: center;
+   justify-self: center;
+   grid-row-start: 4;
+ }
+ 
+ 
+ #navbar-link3{
+   grid-column-start: 5;
+   grid-row-start: 4;
+   justify-self: self-end;
+   align-self: center;
+ }
+ 
+ .navbar > :nth-child(4) {
+   background-color: rgba(245, 238, 228, 1);
+   grid-column: 1 / span 5;
+ }
+ 
+ .material-symbols-outlined {
+   font-variation-settings:
+   'FILL' 0,
+   'wght' 500,
+   'GRAD' 0,
+   'opsz' 24;
+   color: #4C3B3B;
+   margin: 0 .5rem;
+ }
+ 
+ 
+ /* Styling af dropdown menu */
+ 
+ .dropdown-content {
+   display: none; /*sørger for at dropdown ikke vises hele tiden */
+ } 
+ 
+ #navbar-link2:hover + .dropdown-content{
+ display: block; /*viser dropdown ved hover */
+ } 
+ 
+ 
+ .dropdown-content {
+   color: #0000FF;
+   grid-column: 3 / span 2;
+   align-self: start;
+   justify-self: center;
+   grid-row-start:4;
+ }
+ 
+ .dropdown-content {
+   position: absolute;
+   top: 20em;
+   right: 31em;
+   z-index: 1000;
+   list-style-type: none;
+ }
+ 
+ .dropdown-content {
+   background-color: rgba(245, 238, 228, 1);
+   padding: 10px;
+ }
+ 
+ .dropdown-content li a {
+   text-align: center;
+   color: #0000FF;
+ 
+   display: block;
+   padding: 10px;
+   font-size: 0.75em;
+  }
+ 
+  .dropdown-content li a:hover {
+   color: #4C3B3B;
+  }
+ 
+  /* Styler så den ikke ændre farver efter klik */
+ 
+  .navbar-link:focus {
+   outline: none; /* Remove the default focus outline */
+ }
+ 
+ .navbar-link:focus,
+ .navbar-link:active {
+   color: #0000FF; /* Use the same color as the parent element */
+ }
+ 
+ 
+ /* Styling navbar SLUT */
+
+
  
     /* styling af kontakt overskrift */
     h1 {
