--- a/nippon/css/favoritter.css
+++ b/nippon/css/favoritter.css
@@ -34,7 +34,8 @@ font-size: 1.7rem;
 h2 {
     font-size: 1.5rem;
     text-align: left;
-    margin: 1rem;
+    margin: 1rem;font-weight: 100;
+
 }
 
 h3 {
