--- a/nippon/css/style.css
+++ b/nippon/css/style.css
@@ -193,13 +193,62 @@ body{
 }
 
 /* Oplevelsespakke teaser */
-.oplevelsespakke-teaser{
-    background-color: rgba(245, 238, 228, 1);
-    width: 95%;
-    height: 20rem;
+/* img */
+.oplevelsespakke-teaser {
+    position: relative;
+}
+
+.sepakken {
+    width: 94.5%;
+    height: 30rem;
     margin-top: 2rem;
     justify-self: center;
+    margin-left: 2.5%;
 }
+
+/* text */
+.oplevelsespakke-teaser div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #4C3B3B; /* Set the text color to white for visibility on the image */
+}
+
+.oplevelsespakke-teaser h1 {
+    font-size: 3.5rem;
+    color: #4C3B3B;
+}
+
+.oplevelsespakke-teaser h2 {
+    font-size: 2rem;
+}
+
+.oplevelsespakke-teaser p {
+    font-size: 1.5rem;
+    color: #4C3B3B;
+}
+
+/* link */
+.seindhold {
+    width: 13%;
+    justify-self: center;
+    border-radius: 100px;
+    color: #4C3B3B;
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: lighter;
+    padding: .5rem 0;
+    background-color: white;
+    text-decoration: none;
+    cursor: pointer;
+    text-align: center;
+    border: none;
+    font-weight: 700;
+}
+
+
 
 /* Tekst på midten af siden */
 .middle-text{
@@ -252,7 +301,20 @@ body{
     text-align: center;
  }
  
+ /* styling af Somesection */
+ /* text */
+
+.collage {
+    width: 40%;
+    display: flex;
+    justify-content: end;
+    margin-left: auto; 
+    
+}
+
+ /* følg ikoner */
  
+
 
  /* Styling af footer */
  /* Styling af billede i footer */
