--- a/nippon/css/style.css
+++ b/nippon/css/style.css
@@ -302,18 +302,59 @@ body{
  }
  
  /* styling af Somesection */
+ .some {
+    margin-top: 5rem;
+    width: 95%;
+    display: flex;
+}
+
  /* text */
+ .text-container h1 {
+color: #0000FF;
+font-size: 2.5rem;
+margin-bottom: -1%;
+ }
+
+ .text-container h2 {
+color: #0000FF;
+ }
+ 
+ .text-container p{
+font-size: 1rem;
+margin-right: 12rem;
+ }
+
+ .text-container {
+    margin-left: 10%;
+    margin-top: 7rem;
+ }
+
+
+ /* img */
 
 .collage {
     width: 40%;
-    display: flex;
-    justify-content: end;
-    margin-left: auto; 
-    
+    text-align: center; 
 }
 
  /* følg ikoner */
- 
+ .someiconer {
+    padding: 1rem;
+    color: #4C3B3B;
+    list-style: none;
+    display: flex;
+    align-items: center;
+ }
+
+
+ .iconer a {
+    font-size: 25px;
+    color: inherit;
+    line-height: 38px;
+    border-radius: 50%;
+    padding: 0 15px;
+    color: #0000FF;
+ }
 
 
  /* Styling af footer */
