--- a/nippon/css/favoritter.css
+++ b/nippon/css/favoritter.css
@@ -52,7 +52,9 @@ body{
   
   #navbar-styling-element{
     grid-column: 1 / span 5;
-    grid-row-start: 4;
+    grid-row: 4;
+    align-self: center;
+    height: 100%;
     color: rgba(245, 238, 228, 1);
   }
   
@@ -305,7 +307,7 @@ h3 {
 
 
 /* Styling af images */
-img {
+section img {
     width: 20%;
     height: 20%;
     margin: 2rem;
@@ -322,7 +324,8 @@ img {
 }
 
 /* Styling af tilføj knap og hjerte */
-.material-symbols-outlined {
+#favorit-hjerte1,
+#favorit-hjerte2{
     color:#0000FF;
     width: 10%;
 }
