--- a/nippon/css/kontakt.css
+++ b/nippon/css/kontakt.css
@@ -48,10 +48,14 @@
  }
  
  #navbar-styling-element{
-   grid-column: 1 / span 5;
-   grid-row-start: 4;
-   color: rgba(245, 238, 228, 1);
- }
+  grid-column: 1 / 6;
+  grid-row: 4;
+  align-self: end;
+  width: 100%;
+  justify-self: end;
+  height: 100%;
+  color: rgba(245, 238, 228, 1);
+}
  
  #navbar-link1{
    color: #0000FF;
@@ -59,6 +63,7 @@
    align-self: center;
    justify-self: center;
    grid-row-start: 4;
+   text-decoration: none;
  }
  
  #navbar-link2{
@@ -67,6 +72,7 @@
    align-self: center;
    justify-self: center;
    grid-row-start: 4;
+   text-decoration: none;
  }
  
  
@@ -132,6 +138,7 @@
    display: block;
    padding: 10px;
    font-size: 0.75em;
+   text-decoration: none;
   }
  
   .dropdown-content li a:hover {
