--- a/nippon/css/udforsk-kredsloeb.css
+++ b/nippon/css/udforsk-kredsloeb.css
@@ -165,6 +165,7 @@
 
 main h1 {
    padding-bottom:3rem;
+   font-size: 2.5rem;
 
 }
 
@@ -179,6 +180,7 @@ main h2 {
    align-items: center;
    height: 50rem;
    width: auto;
+   margin-left: 13%;
 }
 
 
