--- a/nippon/css/udforsk-kokke.css
+++ b/nippon/css/udforsk-kokke.css
@@ -182,7 +182,7 @@ body{
 }
 
 #nobu-navn{
-    color: #AFAFFF;
+    color: #ff0000;
     font-size: 2rem;
     font-weight: lighter;
     grid-row-start: 2;
@@ -241,7 +241,7 @@ body{
 
 /* Portræt af Yoshiko Hattori */
 #yoshiko-navn{
-    color: #AFAFFF;
+    color: #ff0000;
     font-size: 2rem;
     font-weight: lighter;
     grid-row-start: 6;
