--- a/nippon/css/style.css
+++ b/nippon/css/style.css
@@ -253,6 +253,7 @@ body{
 /* Tekst på midten af siden */
 .middle-text{
     color: #0000FF;
+    font-weight:lighter;
     justify-self: center;
     text-align: center;
     font-size: 2.7rem;
@@ -314,13 +315,15 @@ body{
 
  /* text */
  .text-container h1 {
-color: #0000FF;
+color: #ff0000;
+font-weight: lighter;
 font-size: 2.5rem;
 margin-bottom: -1%;
  }
 
  .text-container h2 {
-color: #0000FF;
+color: #ff0000;
+font-weight: lighter;
  }
  
  .text-container p{
@@ -357,7 +360,7 @@ margin-right: 12rem;
     line-height: 38px;
     border-radius: 50%;
     padding: 0 15px;
-    color: #0000FF;
+    color: #ff0000;
  }
 
 
