--- a/nippon/css/kurv.css
+++ b/nippon/css/kurv.css
@@ -22,7 +22,7 @@ body{
   }
   
   
-  #navbar-logo{
+  #navbar-logo, #navbar-logo1 {
     width: 9.5rem;
     grid-column-start: 3;
     justify-self: center;
