rettelser kredsløb side

--- a/nippon/css/udforsk-kredsloeb.css
+++ b/nippon/css/udforsk-kredsloeb.css
@@ -5,13 +5,12 @@
   }
   
   body{
-   margin: 0;
-   padding: 0;
-   font-family: "Sulphur Point", sans-serif;
-   font-weight: 400;
-   font-style: normal;
-   background-color: rgba(245, 238, 228, 0.5);
-   display: grid;
+    margin: 0;
+    padding: 0;
+    font-family: "Sulphur Point", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    background-color: rgba(245, 238, 228, 0.5);
 }
 
 
@@ -165,22 +164,30 @@
 
 main h1 {
    padding-bottom:3rem;
-   font-size: 2.5rem;
+   font-size: 35px;
 
 }
 
-main h2 {
-   font-size: 1.5vw;
-   padding-bottom: 3rem;
+main h3 {
+  color: #0000FF;
+  text-align: center;
+  justify-content: center;
+  font-size: 35px;
+  padding: 5%;
+}
+
+main p {
+  padding-bottom: 3%;
+  font-size: 20px;
+
 }
 
 .infog {
-   display: flex;
    justify-content: center;
    align-items: center;
    height: 50rem;
    width: auto;
-   margin-left: 13%;
+   padding: 5%;
 }
 
 
