--- a/nippon/css/udforsk-kredsloeb.css
+++ b/nippon/css/udforsk-kredsloeb.css
@@ -30,7 +30,8 @@
    grid-row-start: 1;
    grid-row-end: span 2;
    align-self: center;
-   padding-top: 3%; 
+   padding-top: 3%;
+   cursor: pointer;
  }
  
  #navbar-waves{
